# lovikod_litres_promo_scraper_py

./: .gitignore  LICENSE  codes.py  db_sqlite.py  main.py  pyproject.toml  requirements.txt  test_codes.py
